[package]
name = "rich_tasks"
version = "0.1.0"
authors = ["Peter Schafhalter <pschafhalter@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
threadpool = "1.0"
tokio = { version = "0.2.22", features = ["sync", "tcp", "io-util", "rt-core", "rt-threaded", "time", "macros", "stream", "blocking"] }
